--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -9,9 +9,9 @@
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="#" class="ui-btn-active"><i class="material-icons">home</i>${TabHome}</a>
-            <a href="#homeNextUpPage"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
-            <a href="#favoritesPage"><i class="material-icons">favorite</i>${TabFavorites}</a>
-            <a href="#homeUpcomingPage"><i class="material-icons">schedule</i>${TabUpcoming}</a>
+            <a href="homenextup.html"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
+            <a href="homefavorites.html"><i class="material-icons">favorite</i>${TabFavorites}</a>
+            <a href="homeupcoming.html"><i class="material-icons">schedule</i>${TabUpcoming}</a>
         </div>
 
         <div data-role="content">
@@ -27,73 +27,6 @@
                 <div class="sections"></div>
             </div>
 
-        </div>
-    </div>
-    <div id="homeNextUpPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/homenextup,paperbuttonstyle">
-
-        <div class="libraryViewNav globalNav">
-            <a href="#indexPage"><i class="material-icons">home</i>${TabHome}</a>
-            <a href="#" class="ui-btn-active"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
-            <a href="#favoritesPage"><i class="material-icons">favorite</i>${TabFavorites}</a>
-            <a href="#homeUpcomingPage"><i class="material-icons">schedule</i>${TabUpcoming}</a>
-        </div>
-        <div data-role="content">
-            <div class="ehsContent">
-
-                <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
-                    <div>
-                        <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
-                    </div>
-
-                    <div id="resumableItems" class="itemsContainer">
-                    </div>
-                </div>
-
-                <div class="homePageSection">
-                    <div>
-                        <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
-                    </div>
-                    <div id="nextUpItems" class="itemsContainer">
-                    </div>
-                </div>
-                <p class="noNextUpItems" style="display: none;">${NoNextUpItemsMessage}</p>
-            </div>
-        </div>
-    </div>
-    <div id="favoritesPage" data-role="page" class="page libraryPage allLibraryPage backdropPage" data-backdroptype="movie,series,game,book" data-require="scripts/favorites,paperbuttonstyle">
-
-        <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#indexPage"><i class="material-icons">home</i>${TabHome}</a>
-            <a href="#homeNextUpPage"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
-            <a href="#favoritesPage" class="ui-btn-active"><i class="material-icons">favorite</i>${TabFavorites}</a>
-            <a href="#homeUpcomingPage"><i class="material-icons">schedule</i>${TabUpcoming}</a>
-        </div>
-
-        <div data-role="content">
-
-            <div class="ehsContent">
-                <div class="sections"></div>
-            </div>
-        </div>
-    </div>
-    <div id="homeUpcomingPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/homeupcoming">
-        <div class="libraryViewNav globalNav">
-            <a href="#indexPage"><i class="material-icons">home</i>${TabHome}</a>
-            <a href="#homeNextUpPage"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
-            <a href="#favoritesPage"><i class="material-icons">favorite</i>${TabFavorites}</a>
-            <a href="#" class="ui-btn-active"><i class="material-icons">schedule</i>${TabUpcoming}</a>
-        </div>
-        <div data-role="content">
-            <div class="ehsContent">
-                <div id="upcomingItems" class="itemsContainer">
-                </div>
-                <div class="noItemsMessage" style="display: none;">
-                    <p>${MessageNothingHere}</p>
-                    <p><a href="metadata.html">${MessagePleaseEnsureInternetMetadata}</a></p>
-                </div>
-            </div>
         </div>
     </div>
 </body>
