--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -9,9 +9,9 @@
         <div class="itemTabs homeTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
                 <a href="index.html" class="lnkHomeHome"><i class="material-icons">home</i>${TabHome}</a>
-                <a href="index.html#homeNextUpPage" class="lnkHomeNextUp"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
-                <a href="index.html#favoritesPage" class="lnkHomeFavorites"><i class="material-icons">favorite</i>${TabFavorites}</a>
-                <a href="index.html#homeUpcomingPage" class="lnkHomeUpcoming"><i class="material-icons">schedule</i>${TabUpcoming}</a>
+                <a href="homenextup.html" class="lnkHomeNextUp"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
+                <a href="homefavorites.html" class="lnkHomeFavorites"><i class="material-icons">favorite</i>${TabFavorites}</a>
+                <a href="homeupcoming.html" class="lnkHomeUpcoming"><i class="material-icons">schedule</i>${TabUpcoming}</a>
             </div>
         </div>
 
