--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -43,21 +43,21 @@
                                 <paper-fab icon="stop" class="btnPlayStateCommand btnStop subdued" title="${ButtonStop}"></paper-fab>
                                 <paper-fab icon="skip-next" class="btnPlayStateCommand btnNextTrack subdued" title="${ButtonNextTrack}"></paper-fab>
                             </div>
-                            <div>
-                                <paper-fab icon="volume-up" class="btnCommand subdued" title="${ButtonVolumeUp}" data-command="VolumeUp"></paper-fab>
-                                <paper-fab icon="volume-off" class="btnCommand subdued" title="${ButtonMute}" data-command="ToggleMute"></paper-fab>
+                            <div class="buttonsRow2">
+                                <paper-fab icon="volume-up" class="btnCommand subdued volumeButton" title="${ButtonVolumeUp}" data-command="VolumeUp"></paper-fab>
+                                <paper-fab icon="volume-off" class="btnCommand subdued volumeButton" title="${ButtonMute}" data-command="ToggleMute"></paper-fab>
                                 <paper-fab icon="info" class="btnCommand videoButton subdued" title="${ButtonOsd}" data-command="ToggleOsdMenu"></paper-fab>
                                 <paper-fab icon="fullscreen" class="btnToggleFullscreen videoButton btnPlayStateCommand subdued" title="${ButtonFullscreen}" data-command="ToggleFullscreen"></paper-fab>
                             </div>
-                            <div>
-                                <paper-fab icon="volume-down" class="btnCommand subdued" title="${ButtonVolumeDown}" data-command="VolumeDown"></paper-fab>
+                            <div class="buttonsRow3">
+                                <paper-fab icon="volume-down" class="btnCommand subdued volumeButton" title="${ButtonVolumeDown}" data-command="VolumeDown"></paper-fab>
                                 <paper-fab icon="audiotrack" class="btnAudioTracks videoButton btnPlayStateCommand subdued" title="${ButtonAudioTracks}" data-command="GoToSearch"></paper-fab>
                                 <paper-fab icon="subtitles" class="btnSubtitles videoButton btnPlayStateCommand subdued" title="${ButtonSubtitles}" data-command="GoToSearch"></paper-fab>
                                 <paper-fab icon="movie" class="btnChapters videoButton btnPlayStateCommand subdued" title="${ButtonScenes}" data-command="GoToSearch"></paper-fab>
                             </div>
-                        </div>
-                        <div class="nowPlayingPageUserDataButtons" style="margin-top:1.5em;">
+                            <div class="nowPlayingPageUserDataButtons" style="margin-top:1em;">
 
+                            </div>
                         </div>
                     </div>
                 </neon-animatable>
