--- a/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/useredit.html
@@ -76,7 +76,6 @@
                         <div class="fieldDescription">${OptionAllowMediaPlaybackTranscodingHelp}</div>
                         <br />
                     </div>
-                    <br />
                     <div>
                         <fieldset data-role="controlgroup">
                             <legend>${HeaderRemoteControl}</legend>
@@ -88,7 +87,15 @@
                         <div class="fieldDescription">${OptionAllowRemoteSharedDevicesHelp}</div>
                         <br />
                     </div>
-                    <br />
+                    <div>
+                        <fieldset data-role="controlgroup">
+                            <legend>${HeaderSharing}</legend>
+                            <input type="checkbox" id="chkEnableSharing" />
+                            <label for="chkEnableSharing">${OptionAllowLinkSharing}</label>
+                        </fieldset>
+                        <div class="fieldDescription">${OptionAllowLinkSharingHelp}</div>
+                        <br />
+                    </div>
                     <div>
                         <fieldset data-role="controlgroup">
                             <legend>${HeaderSync}</legend>
