add sharing function

--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -143,7 +143,7 @@
                 </neon-animatable>
             </neon-animated-pages>
 
-            <paper-tabs selected="{{selected}}" style="position:fixed;bottom:0;left:0;right:0;" alignbottom>
+            <paper-tabs selected="{{selected}}" style="position:fixed;bottom:0;left:0;right:0;" class="bottomTabs">
 
                 <paper-tab>${TabNowPlaying}</paper-tab>
                 <paper-tab>${TabControls}</paper-tab>
