--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -7,7 +7,7 @@
 
     <div id="indexPage" data-role="page" class="page homePage libraryPage allLibraryPage backdropPage pageWithAbsoluteTabs" data-backdroptype="movie,series,game,book" data-require="scripts/sections,scripts/indexpage,scripts/homenextup,scripts/favorites,scripts/homeupcoming,paperbuttonstyle">
 
-        <div class="libraryViewNav">
+        <div class="libraryViewNav libraryViewNavWithMinHeight">
             <paper-tabs style="display:none;">
                 <paper-tab><i class="material-icons">home</i>${TabHome}</paper-tab>
                 <paper-tab><i class="material-icons">navigate_next</i>${TabNextUp}</paper-tab>
@@ -15,10 +15,10 @@
                 <paper-tab><i class="material-icons">schedule</i>${TabUpcoming}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs" style="display:none;">
-                <a href="index.html" class="ui-btn-active">${TabHome}</a>
-                <a href="index.html?tab=1">${TabNextUp}</a>
-                <a href="index.html?tab=2">${TabFavorites}</a>
-                <a href="index.html?tab=3">${TabUpcoming}</a>
+                <a href="index.html" class="ui-btn-active"><i class="material-icons">home</i>${TabHome}</a>
+                <a href="index.html?tab=1"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
+                <a href="index.html?tab=2"><i class="material-icons">favorite</i>${TabFavorites}</a>
+                <a href="index.html?tab=3"><i class="material-icons">schedule</i>${TabUpcoming}</a>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
 
         <div class="pageBackground"></div>
         <div class="ehsContent">
-            <neon-animated-pages entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+            <neon-animated-pages>
                 <neon-animatable>
                     <div class="pageTabContent homeTabContent">
                         <div class="sections"></div>
