--- a/MediaBrowser.WebDashboard/dashboard-ui/share.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/share.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="publicSharedItemPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-theme="b" data-require="paperbuttonstyle">
+    <div id="publicSharedItemPage" data-role="page" class="page standalonePage noSecondaryNavPage" data-theme="b" data-require="paperbuttonstyle">
 
         <div data-role="content">
 
