--- a/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
@@ -8,9 +8,9 @@
 
         <div class="libraryViewNav">
             <a href="#" class="lnkDisplayPreferences">${TabDisplay}</a>
+            <a href="#" class="lnkHomeScreenPreferences">${TabHomeScreen}</a>
             <a href="#" class="lnkLanguagePreferences">${TabPlayback}</a>
             <a href="#" class="ui-btn-active lnkMyProfile">${TabProfile}</a>
-            <a href="#" class="lnkWebClientPreferences">${TabAppSettings}</a>
         </div>
 
         <div data-role="content">
