--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="collectionItems"></div>
                 <div id="childrenCollapsible" class="hide detailSection">
-                    <div class="detailSectionHeader">
+                    <div class="detailSectionHeader childrenSectionHeader">
                         <span id="childrenTitle"></span>
                     </div>
                     <div id="childrenContent" class="detailSectionContent">
