update people queries

--- a/MediaBrowser.WebDashboard/dashboard-ui/editcollectionitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/editcollectionitems.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="editCollectionTitlesPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}" data-require="scripts/editorsidebar,scripts/editcollectionitems,jqmicons">
+    <div id="editCollectionTitlesPage" data-role="page" class="page libraryPage metadataEditorPage noSecondaryNavPage" data-contextname="${HeaderMetadataManager}" data-require="scripts/editorsidebar,scripts/editcollectionitems,jqmicons">
         <div data-role="content editPageContent">
             <div class="editPageSidebar">
                 <div class="libraryTree">
