--- a/MediaBrowser.WebDashboard/dashboard-ui/playlists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlists.html
@@ -38,7 +38,7 @@
                         <label for="selectView">${LabelView}</label>
                         <select id="selectView">
                             <option value="List">${OptionList}</option>
-                            <option value="PosterCard">${OptionPosterCard}</option>
+                            <option value="Poster">${OptionPoster}</option>
                         </select>
                     </div>
                     <br />
