--- a/MediaBrowser.WebDashboard/dashboard-ui/movietrailers.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movietrailers.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="movieTrailersPage" data-role="page" class="page libraryPage" data-require="scripts/movietrailers">
+    <div id="movieTrailersPage" data-role="page" class="page libraryPage" data-require="scripts/movietrailers,jqmicons">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="moviesrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
@@ -22,7 +22,7 @@
             <div class="viewSettings">
                 <div class="listTopPaging">
                 </div>
-                <button class="btnTrailerReel" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonTrailerReel}</button>
+                <button class="btnTrailerReel" type="button" data-icon="action" data-inline="true" data-mini="true">${ButtonTrailerReel}</button>
             </div>
             <div id="items" class="itemsContainer paddedItemsContainer"></div>
             <p class="noItemsMessage" style="display:none;text-align:center;">${MessageNoTrailersFound}</p>
