--- a/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/dashboard.html
@@ -64,7 +64,7 @@
                             </div>
                             <p>${MessagePleaseRestartServerToFinishUpdating}</p>
                             <div class="btnRestartContainer hide">
-                                <paper-button raised class="submit" onclick="DashboardPage.restartServer();"><iron-icon icon="refresh"></iron-icon><span>${ButtonRestartNow}</span></paper-button>
+                                <paper-button raised class="submit" onclick="DashboardPage.restart();"><iron-icon icon="refresh"></iron-icon><span>${ButtonRestartNow}</span></paper-button>
                             </div>
                         </div>
 
