--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <div id="indexPage" data-role="page" class="page homePage libraryPage allLibraryPage backdropPage pageWithAbsoluteTabs" data-backdroptype="movie,series,game,book" data-require="scripts/sections,scripts/indexpage,scripts/homenextup,scripts/favorites,scripts/homeupcoming,paperbuttonstyle">
+    <div id="indexPage" data-role="page" class="page homePage libraryPage allLibraryPage backdropPage pageWithAbsoluteTabs" data-title="${ButtonHome}" data-backdroptype="movie,series,game,book" data-require="scripts/sections,scripts/indexpage,scripts/homenextup,scripts/favorites,scripts/homeupcoming,paperbuttonstyle">
 
         <div class="libraryViewNav libraryViewNavWithMinHeight">
             <paper-tabs style="display:none;">
